--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,15 @@
 site_name: kafka 使用手册
-site_url: https://mapan1984.github.io/
+site_url: https://mapan1984.github.io/kafka-manual/
 repo_url: https://github.com/mapan1984/kafka-manual/
 site_description: kafka 使用手册
 site_author: mapan
 
 nav:
-  - 介绍: index.md
-  - Kafka-manual:
-    - kafka/index.md
-    - 1. kafka tips: kafka/2020-04-01-kafka-tips.md
-    - 2. kafka config: kafka/2019-10-20-kafka-config.md
-    - 3. kafka upgrade: kafka/2020-10-28-kafka-upgrade.md
+  - 1. 基础操作: '1-基础操作/index.md'
+  - 2. 其他操作:
+    - 1. 版本升级: '2-其他操作/kafka-upgrade.md'
+    - 2. 转发服务: '2-其他操作/kafka-proxy.md'
+  - 3. 常用配置: '3-常用配置/index.md'
 
 theme:
   # name: readthedocs
@@ -29,3 +28,10 @@ plugins:
         - ja
 
 extra_css: []
+
+
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.snippets
