--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,14 @@ nav:
     - 1. 版本升级: '2-其他操作/kafka-upgrade.md'
     - 2. 转发服务: '2-其他操作/kafka-proxy.md'
     - 3. 手动迁移分区数据: '2-其他操作/kafka-move-partiton.md'
-  - 3. 常用配置: '3-常用配置/index.md'
+  - 3. 常用配置:
+    - '3-常用配置/index.md'
+    - 1. jvm config: '3-常用配置/1-jvm-config.md'
+    - 2. borker config: '3-常用配置/2-broker-config.md'
+    - 3. topic config: '3-常用配置/3-topic-config.md'
+    - 4. producer config: '3-常用配置/4-producer-config.md'
+    - 5. consumer config: '3-常用配置/5-consumer-config.md'
+    - 6. other: '3-常用配置/6-other.md'
   - 4. 监控: '4-监控/index.md'
 
 theme:
