--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,12 +5,14 @@ site_description: kafka 使用手册
 site_author: mapan
 
 nav:
+  - 0. Kafka 手册: 'README.md'
   - 1. 基础操作: '1-基础操作/index.md'
   - 2. 其他操作:
     - 2.0 重新分区: '2-其他操作/kafka-reassign-partitions.md'
     - 2.1 版本升级: '2-其他操作/kafka-upgrade.md'
     - 2.2 转发服务: '2-其他操作/kafka-proxy.md'
     - 2.3 手动迁移分区数据: '2-其他操作/kafka-move-partiton.md'
+    - 2.4 迁移分区数据限流: '2-其他操作/kafka-reassign-partition-throttle.md'
   - 3. 常用配置:
     - '3-常用配置/index.md'
     - 3.0 os config: '3-常用配置/0-os-config.md'
