--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,11 +8,12 @@ nav:
   - 0. Kafka 手册: 'README.md'
   - 1. 基础操作: '1-基础操作/index.md'
   - 2. 其他操作:
-    - 2.0 重新分区: '2-其他操作/kafka-reassign-partitions.md'
+    - 2.0 重新分配分区: '2-其他操作/kafka-reassign-partitions.md'
     - 2.1 版本升级: '2-其他操作/kafka-upgrade.md'
     - 2.2 转发服务: '2-其他操作/kafka-proxy.md'
     - 2.3 手动迁移分区数据: '2-其他操作/kafka-move-partiton.md'
     - 2.4 迁移分区数据限流: '2-其他操作/kafka-reassign-partition-throttle.md'
+    - 2.5 理论极限性能预估: '2-其他操作/kafka-performance-estimate.md'
   - 3. 常用配置:
     - '3-常用配置/index.md'
     - 3.0 os config: '3-常用配置/0-os-config.md'
